erDiagram
    USER {
        int user_id PK
    }
    PERSON {
        int person_id PK
        int role_id FK
        int created_by FK
        int updated_by FK
    }
    ROLE {
        int role_id PK
        int created_by FK
        int updated_by FK
    }
    TEAM {
        int team_id PK
        int parent_team_id FK
        int manager FK
        int created_by FK
        int updated_by FK
    }
    TEAMPERSON {
        int teamperson_id PK
        int team_id FK
        int person_id FK
    }
    TEAMGOAL {
        int teamgoal_id PK
        int team_id FK
        int skill_id FK
        int created_by FK
        int updated_by FK
    }
    PERSONSKILL {
        int personskill_id PK
        int person_id FK
        int skill_id FK
        int created_by FK
        int updated_by FK
    }
    PERSONGOAL {
        int persongoal_id PK
        int person_id FK
        int skill_id FK
        int created_by FK
        int updated_by FK
    }
    PERSONSKILLHISTORY {
        int personskill_id PK
        int person_id FK
        int skill_id FK
        int created_by FK
        int updated_by FK
    }
    SKILL {
        int skill_id PK
        int created_by FK
        int updated_by FK
    }
    TOOL {
        int tool_id PK
        int created_by FK
        int updated_by FK
    }
    SKILLTOOL {
        int skilltool_id PK
        int skill_id FK
        int tool_id FK
        int created_by FK
        int updated_by FK
    }

    PERSON }o--|| ROLE : "role_id"
    PERSON }o--|| USER : "created_by/updated_by"
    ROLE }o--|| USER : "created_by/updated_by"
    TEAM }o--|| USER : "created_by/updated_by"
    TEAM }o--|| PERSON : "manager"
    TEAM }o--|| TEAM : "parent_team_id"
    TEAMPERSON }o--|| TEAM : "team_id"
    TEAMPERSON }o--|| PERSON : "person_id"
    TEAMGOAL }o--|| TEAM : "team_id"
    TEAMGOAL }o--|| SKILL : "skill_id"
    TEAMGOAL }o--|| USER : "created_by/updated_by"
    PERSONSKILL }o--|| PERSON : "person_id"
    PERSONSKILL }o--|| SKILL : "skill_id"
    PERSONSKILL }o--|| USER : "created_by/updated_by"
    PERSONGOAL }o--|| PERSON : "person_id"
    PERSONGOAL }o--|| SKILL : "skill_id"
    PERSONGOAL }o--|| USER : "created_by/updated_by"
    PERSONSKILLHISTORY }o--|| PERSON : "person_id"
    PERSONSKILLHISTORY }o--|| SKILL : "skill_id"
    PERSONSKILLHISTORY }o--|| USER : "created_by/updated_by"
    SKILLTOOL }o--|| SKILL : "skill_id"
    SKILLTOOL }o--|| TOOL : "tool_id"
    SKILLTOOL }o--|| USER : "created_by/updated_by"
    SKILL }o--|| USER : "created_by/updated_by"
    TOOL }o--|| USER : "created_by/updated_by"